# spektrafilm-ofx

./: .gitignore  CMakeLists.txt  README.md  build_macos.sh  install_instructions.txt
shaders/: SpektraFilm.metal
shaders/vulkan/: SpektraCurveDevelop.comp  SpektraDiffusion.comp  SpektraDir.comp  SpektraFilmExposure.comp  SpektraGrain.comp  SpektraHalation.comp  SpektraPrintScan.comp  SpektraScannerPost.comp
src/: SpektraAppBridge.h  SpektraAppBridge.mm  SpektraFilmPlugin.cpp  SpektraMetalRenderer.h  SpektraMetalRenderer.mm  SpektraParameters.h  SpektraRenderer.h  SpektraTooltips.h  SpektraVulkanRenderer.cpp  SpektraVulkanRenderer.h
tools/: SpektraMetalParityHarness.mm  SpektraMetalPerfHarness.mm  SpektraVulkanCopyHarness.cpp  package_macos_release.sh  perf_candidates_final_core.json  run_final_core_profile.py  run_perf_quality_sweep.py  test_run_final_core_profile.py  test_run_perf_quality_sweep.py
